--- a/index.html
+++ b/index.html
@@ -13,8 +13,18 @@
 <body>
   <div id="loader-bg">
     <div id="loading">
-      <img src="images/load.gif">
-      <h1>Loading...</h1>
+      <div class="loading">
+        <span>L</span>
+        <span>o</span>
+        <span>a</span>
+        <span>d</span>
+        <span>i</span>
+        <span>n</span>
+        <span>g</span>
+        <span>.</span>
+        <span>.</span>
+        <span>.</span>
+      </div>
     </div>
   </div>
   <div id="contents">
@@ -133,6 +143,14 @@
             <div class="strip">
               <a href="https://tagto.snsnap.net" class="btn">MORE</a>
             </div>
+            <img src="images/t-iv1.png" alt="">
+            <div class="strip">
+              <a href="https://tagto.snsnap.net" class="btn">MORE</a>
+            </div>
+            <img src="images/t-shiryo.png" alt="">
+            <div class="strip">
+              <a href="https://tagto.snsnap.net" class="btn">MORE</a>
+            </div>
           </div>
           <div id="modal3" style="display:none;">
             <h2>Original Magazine</h2>
@@ -143,8 +161,6 @@
             </p>
             <h3>新規登録画面</h3>
             <img src="images/om-signup.png" alt="">
-            <h3>ログイン画面</h3>
-            <img src="images/om-signin.png" alt="">
             <h3>ユーザートップ画面</h3>
             <img src="images/om-top2.png" alt="">
             <h3>ランキングページ</h3>
@@ -180,7 +196,7 @@
       <section id="link-about">
         <h1 class="title">ABOUT</h1>
         <div class="inner">
-          <img src="images/yuka.png" alt="" class="me">
+          <img src="images/yuka.jpg" alt="" class="me">
           <div class="profile-inner">
             <h1>長友 優果</h1>
             <h3>Yuka Nagatomo</h3>
