--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Yuka Nagatomo Portfolio 2018</title>
+  <title>Yuka Nagatomo Portfolio</title>
   <link rel="stylesheet" href="css/modaal.css">
   <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
   <link rel="stylesheet" href="./css/animate.css">
@@ -40,7 +40,31 @@
       <section id="link-work">
         <h1 class="title">WORK</h1>
         <div class="switch">
-          <div class="work fadein animated work1">
+         <div class="work fadein animated work10">
+            <img src="images/work10.png" alt="">
+            <a href="#modal10" class="modal">
+              <div class="description">
+                <h2>Business card</h2>
+              </div>
+            </a>
+          </div>
+          <div class="work fadein animated work9">
+            <img src="images/work9w.png" alt="">
+            <a href="#modal9" class="modal">
+              <div class="description">
+                <h2>Richapo TV</h2>
+              </div>
+            </a>
+          </div>
+          <div class="work fadein animated work8">
+            <img src="images/work8.png" alt="">
+            <a href="#modal8" class="modal">
+              <div class="description">
+                <h2>Household accounts app</h2>
+              </div>
+            </a>
+          </div>
+          <div class="work fadein animated work7">
             <img src="images/work7w.png" alt="">
             <a href="#modal7" class="modal">
               <div class="description">
@@ -48,7 +72,7 @@
               </div>
             </a>
           </div>
-          <div class="work fadein animated work2">
+          <div class="work fadein animated work6">
             <img src="images/work6w.png" alt="">
             <a href="#modal6" class="modal">
               <div class="description">
@@ -56,7 +80,7 @@
               </div>
             </a>
           </div>
-          <div class="work fadein animated work3">
+          <div class="work fadein animated work5">
             <img src="images/work5.png" alt="">
             <a href="#modal5" class="modal">
               <div class="description">
@@ -73,7 +97,7 @@
               </div>
             </a>
           </div>
-          <div class="work fadein animated work5">
+          <div class="work fadein animated work3">
             <img src="images/work2w.png" alt="">
             <a href="#modal2" class="modal">
               <div class="description">
@@ -81,7 +105,8 @@
               </div>
             </a>
           </div>
-          <div class="work fadein animated work6">
+<!--
+          <div class="work fadein animated work2">
             <img src="images/work3w.png" alt="">
             <a href="#modal3" class="modal">
               <div class="description">
@@ -89,7 +114,8 @@
               </div>
             </a>
           </div>
-          <div class="work fadein animated work7">
+-->
+          <div class="work fadein animated work2">
             <img src="images/work1w.png" alt="">
             <a href="#modal1" class="modal">
               <div class="description">
@@ -99,6 +125,41 @@
           </div>
         </div>
         <div class="modalwindow">
+        <div id="modal10" style="display:none;">
+            <h2>Business card</h2>
+            <p class="bold">design</p>
+            <p class="small">illustrator</p>
+            <p class="small">2018.12</p>
+            <p class="text">ライフイズテックでのキャンプ用にメンター名の名刺を製作した。メンター名はお茶から由来しているのでお茶の葉をイメージしたデザインにした。中高生向けのイベントのため、可愛らしくわかりやすいデザインになるように心がけた。
+            </p>
+            <img src="images/name1.png" alt="">
+            <img src="images/name2.png" alt="">
+          </div>
+        <div id="modal9" style="display:none;">
+            <h2>Richapo TV</h2>
+            <p class="bold">design/front-end</p>
+            <p class="small">HTML/CSS/JavaScript</p>
+            <p class="small">2018.10</p>
+            <p class="text">アルバイト先の同期と期間限定YouTuberをやった時に記念に作ったサイト。テーマカラーであるピンクを基調としたポップで可愛いデザインにしている。
+            </p>
+            <img src="images/rcp.png" alt="">
+            <div class="strip">
+              <a href="https://richapotv.netlify.com/" class="btn" target="_blank">MORE</a>
+            </div>
+            <img src="images/rcp_menu.png" alt="">
+            <div class="strip">
+              <a href="https://richapotv.netlify.com/" class="btn" target="_blank">MORE</a>
+            </div>
+          </div>
+         <div id="modal8" style="display:none;">
+            <h2>Household accounts app</h2>
+            <p class="bold">planning/design</p>
+            <p class="small">Sketch</p>
+            <p class="small">2018.08</p>
+            <p class="text">株式会社ディー・エヌ・エーで2018/08/23-24に行われたDeNAサマーインターン UX/UIデザインコースにて作成した家計簿アプリのUIデザイン。<br>ペルソナはめんどくさがり屋の20代OL。旅行のための貯金が目的で、家計簿として細かい金額まで記録することは気にしていない。<br>このアプリは毎晩寝る前にその日の使った金額を入力してもらい、次の日の予算をお知らせしてくれる。予定や月の予算をあらかじめ設定しておくことでその日に合わせて予算を調整してくれる。貯金することが楽しみになることと縛られすぎない予算設定ができて簡単に毎日入力してもらえるようなアプリになるように企画・デザインをした。
+            </p>
+            <img src="images/dena.gif" alt="" style="width: 30%">
+          </div>
           <div id="modal7" style="display:none;">
             <h2>Yuka Nagatomo Portfolio</h2>
             <p class="bold">design/front-end</p>
@@ -116,7 +177,13 @@
             <p class="text">ライフイズテック株式会社にて、メンターとして中高生にWebデザインを教えるために用意したプラグインバリエーション集。 中高生でも実装しやすいCSSアニメーションやjQueryを用いたプラグインを紹介している。 中高生に一目で興味を持ってもらえるようなデザインを心がけた。
             </p>
             <img src="images/fwc.png" alt="">
+            <div class="strip">
+              <a href="https://webd-development.netlify.com" class="btn" target="_blank">MORE</a>
+            </div>
             <img src="images/fwc2.png" alt="">
+            <div class="strip">
+              <a href="https://webd-development.netlify.com/second.html" class="btn" target="_blank">MORE</a>
+            </div>
           </div>
           <div id="modal5" style="display:none;">
             <h2>Footwork T-shirt Design</h2>
@@ -141,15 +208,15 @@
             </p>
             <img src="images/tagto.png" alt="">
             <div class="strip">
-              <a href="https://tagto.snsnap.net" class="btn">MORE</a>
+              <a href="https://tagto.snsnap.net" class="btn" target="_blank">MORE</a>
             </div>
             <img src="images/t-iv1.png" alt="">
             <div class="strip">
-              <a href="https://tagto.snsnap.net" class="btn">MORE</a>
+              <a href="https://tagto.snsnap.net/interview/kirin-gogo-no-kocha" class="btn" target="_blank">MORE</a>
             </div>
             <img src="images/t-shiryo.png" alt="">
             <div class="strip">
-              <a href="https://tagto.snsnap.net" class="btn">MORE</a>
+              <a href="https://tagto.snsnap.net/contact" class="btn" target="_blank">MORE</a>
             </div>
           </div>
           <div id="modal3" style="display:none;">
@@ -189,7 +256,7 @@
             <p class="text">ライフイズテック株式会社にて、ウェブデザイン研修の最終オリジナル作品としてつくったウェブサイト。<br>テーマは「静岡でインスタ映え」。静岡のどこでどのような写真が撮れるのかが一目でわかるように表現。インスタ映えということで対象を10~20代の女性に絞ったポップなデザインと遊び心のある動きをつけた。2017年のトレンドである、スプリットスクリーンレイアウトを取り入れた。
             </p>
             <img src="images/shizuoka.png" alt="">
-            <video src="images/shizuoka.mov" autoplay loop></video>
+            <img src="images/shizuoka.gif" alt="">
           </div>
         </div>
       </section>
