--- a/index.html
+++ b/index.html
@@ -31,24 +31,95 @@
     <header id="top">
       <div class="top">
         <h1>Yuka Nagatomo</h1>
-        <p>Front end engineer</p>
+        <p>Front end Engineer</p>
         <p>UI/UX Designer</p>
       </div>
       <a href="#link-work" class="scroll"><span></span>Scroll</a>
     </header>
     <main>
+      <section id="link-about">
+        <h1 class="title">ABOUT</h1>
+        <div class="inner">
+          <img src="images/yuka.jpg" alt="" class="me">
+          <div class="profile-inner">
+            <h1>長友 優果</h1>
+            <h3>Yuka Nagatomo</h3>
+            <p>
+              1998年12月24日生まれ。<br>明治大学理工学部情報科学科3年在学中。現在大学ではCやJavaなど基礎言語を学んでいる。<br>高校1年生からWebデザインを学び始め、現在も趣味・仕事としてWebサイトを作り続けている。大学1年生からはグラフィックデザインやUI/UXデザインを学び仕事に生かしている。<br>小学校から運営委員や学級委員になり、中高では文化祭実行委員や生徒会、大学ではバドミントンサークルの幹部とリーダーシップを取ることと企画立案が得意である。
+            </p>
+          </div>
+        </div>
+        <div class="inner">
+          <h2>Skill</h2>
+          <p>HTML5 / CSS3 / Sass / JavaScript / jQuery / Ruby / Processing / Sketch / AdobeIllustrator / AdobePhotoshop / AdobeXD / AdobePremierePro / GitHub</p>
+        </div>
+        <div class="inner">
+          <h2>Tool</h2>
+          <p>Brackets / VSCode / Sketch / Adobe / GitHub </p>
+        </div>
+        <div class="inner">
+          <h2>Intern</h2>
+          <table>
+            <tr>
+              <td class="date">2017/06-now</td>
+              <td>ライフイズテック株式会社<br><span>Webデザイン/Webサービス開発/デザイナー/LINEスタンプクリエイター コースメンター<br>学校プロモーション(営業)<br>教科書作成･修正･確認<br>メンター向け Webデザインコース サブ講師</span>
+              </td>
+            </tr>
+            <tr>
+              <td class="date">2017/11-2018/04</td>
+              <td>テテマーチ株式会社 フロントエンドエンジニアインターン</td>
+            </tr>
+            <tr>
+              <td class="date">2017/12-2018/04</td>
+              <td>#SnSnap株式会社 フロントエンドエンジニアインターン</td>
+            </tr>
+            <tr>
+              <td class="date">2018/08/23-24</td>
+              <td>株式会社ディー・エヌ・エー <br>DeNAサマーインターン UX/UIデザインコース</td>
+            </tr>
+            <tr>
+              <td class="date">2018/09/06</td>
+              <td>株式会社グッドパッチ デザイナー1Dayインターン</td>
+            </tr>
+            <tr>
+              <td class="date">2019/01-now</td>
+              <td>dely株式会社 Kurashiru マーケティング部クリエイティブインターン<br><span>キャンペーンLP・アプリ内キャンペーンバナー・広告バナーデザイン/動画広告編集</span></td>
+            </tr>
+            <tr>
+              <td class="date">2019/04-now</td>
+              <td>株式会社baton QuizKnock デザイナーインターン<br><span>クイズメディア「QuizKnock」Webデザイン</span></td>
+            </tr>
+          </table>
+        </div>
+      </section>
       <section id="link-work">
         <h1 class="title">WORK</h1>
         <div class="switch">
-         <div class="work fadein animated work10">
-            <img src="images/work10.png" alt="">
-            <a href="#modal10" class="modal">
+          <div class="work animated work12">
+            <img src="images/work12w.png" alt="">
+            <a href="#modal12" class="modal">
               <div class="description">
-                <h2>Business card</h2>
+                <h2>QuizKnock</h2>
               </div>
             </a>
           </div>
-          <div class="work fadein animated work9">
+          <div class="work animated work11">
+            <img src="images/work11w.png" alt="">
+            <a href="#modal11" class="modal">
+              <div class="description">
+                <h2>School Cup</h2>
+              </div>
+            </a>
+          </div>
+          <div class="work animated work10">
+            <img src="images/work10.png" alt="">
+            <a href="#modal10" class="modal">
+              <div class="description">
+                <h2>Name card</h2>
+              </div>
+            </a>
+          </div>
+          <div class="work animated work9">
             <img src="images/work9w.png" alt="">
             <a href="#modal9" class="modal">
               <div class="description">
@@ -56,7 +127,7 @@
               </div>
             </a>
           </div>
-          <div class="work fadein animated work8">
+          <div class="work animated work8">
             <img src="images/work8.png" alt="">
             <a href="#modal8" class="modal">
               <div class="description">
@@ -64,6 +135,7 @@
               </div>
             </a>
           </div>
+          <!--
           <div class="work fadein animated work7">
             <img src="images/work7w.png" alt="">
             <a href="#modal7" class="modal">
@@ -72,7 +144,8 @@
               </div>
             </a>
           </div>
-          <div class="work fadein animated work6">
+-->
+          <div class="work animated work6">
             <img src="images/work6w.png" alt="">
             <a href="#modal6" class="modal">
               <div class="description">
@@ -80,7 +153,7 @@
               </div>
             </a>
           </div>
-          <div class="work fadein animated work5">
+          <div class="work animated work5">
             <img src="images/work5.png" alt="">
             <a href="#modal5" class="modal">
               <div class="description">
@@ -89,7 +162,7 @@
             </a>
 
           </div>
-          <div class="work fadein animated work4">
+          <div class="work animated work4">
             <img src="images/work4w.png" alt="">
             <a href="#modal4" class="modal">
               <div class="description">
@@ -97,16 +170,8 @@
               </div>
             </a>
           </div>
+          <!--
           <div class="work fadein animated work3">
-            <img src="images/work2w.png" alt="">
-            <a href="#modal2" class="modal">
-              <div class="description">
-                <h2>InstaAntenna</h2>
-              </div>
-            </a>
-          </div>
-<!--
-          <div class="work fadein animated work2">
             <img src="images/work3w.png" alt="">
             <a href="#modal3" class="modal">
               <div class="description">
@@ -115,7 +180,15 @@
             </a>
           </div>
 -->
-          <div class="work fadein animated work2">
+          <div class="work animated work2">
+            <img src="images/work2w.png" alt="">
+            <a href="#modal2" class="modal">
+              <div class="description">
+                <h2>InstaAntenna</h2>
+              </div>
+            </a>
+          </div>
+          <div class="work animated work1">
             <img src="images/work1w.png" alt="">
             <a href="#modal1" class="modal">
               <div class="description">
@@ -125,8 +198,32 @@
           </div>
         </div>
         <div class="modalwindow">
-        <div id="modal10" style="display:none;">
-            <h2>Business card</h2>
+          <div id="modal12" style="display:none;">
+            <h2>Quiz Knock</h2>
+            <p class="bold">design/front-end</p>
+            <p class="small">slim/sass/JavaScript(jQuery)</p>
+            <p class="small">2019.5</p>
+            <p class="text">登録者70万人以上を超える東大生YouTuberグループ「QuizKnock」がライターをするクイズメディアのWebをリニューアル。デザイン・実装共に担当した。東大生発のクイズメディアということで知的なイメージを持たせつつも親しみのあるデザインにした。また毎日使えるように使いやすい導線になるように設計した。
+            </p>
+            <img src="images/quizknock.png" alt="">
+            <div class="strip">
+              <a href="https://quizknock.com/" class="btn" target="_blank">MORE</a>
+            </div>
+          </div>
+          <div id="modal11" style="display:none;">
+            <h2>School Cup 2019</h2>
+            <p class="bold">front-end</p>
+            <p class="small">HTML/CSS/JavaScript</p>
+            <p class="small">2018.6 & 2019.6</p>
+            <p class="text">ライフイズテックスクール(プログラミング学習塾)内の大会LP。School Cupは中高生がWebサイトを作成して課題解決をする大会である。2018年から始まり、2018年・2019年と大会LPのフロントエンド実装を担当した。
+            </p>
+            <img src="images/SchoolCup2019.png" alt="">
+            <div class="strip">
+              <a href="https://life-is-tech.com/schoolcup2019/" class="btn" target="_blank">MORE</a>
+            </div>
+          </div>
+          <div id="modal10" style="display:none;">
+            <h2>Name card</h2>
             <p class="bold">design</p>
             <p class="small">illustrator</p>
             <p class="small">2018.12</p>
@@ -135,7 +232,7 @@
             <img src="images/name1.png" alt="">
             <img src="images/name2.png" alt="">
           </div>
-        <div id="modal9" style="display:none;">
+          <div id="modal9" style="display:none;">
             <h2>Richapo TV</h2>
             <p class="bold">design/front-end</p>
             <p class="small">HTML/CSS/JavaScript</p>
@@ -151,7 +248,7 @@
               <a href="https://richapotv.netlify.com/" class="btn" target="_blank">MORE</a>
             </div>
           </div>
-         <div id="modal8" style="display:none;">
+          <div id="modal8" style="display:none;">
             <h2>Household accounts app</h2>
             <p class="bold">planning/design</p>
             <p class="small">Sketch</p>
@@ -165,7 +262,7 @@
             <p class="bold">design/front-end</p>
             <p class="small">HTML/CSS/JavaScript</p>
             <p class="small">2018.06</p>
-            <p class="text">本サイトであり、私、長友優果のポートフォリオウェブサイト。自分のイメージに合うオレンジなどの暖色をテーマカラーにしている。
+            <p class="text">本サイトであり、私、長友優果のポートフォリオウェブサイト。自分の好きなオレンジをテーマカラーにしている。
             </p>
             <img src="images/portfolio.png" alt="">
           </div>
@@ -260,53 +357,6 @@
           </div>
         </div>
       </section>
-      <section id="link-about">
-        <h1 class="title">ABOUT</h1>
-        <div class="inner">
-          <img src="images/yuka.jpg" alt="" class="me">
-          <div class="profile-inner">
-            <h1>長友 優果</h1>
-            <h3>Yuka Nagatomo</h3>
-            <p>
-              1998年12月24日生まれ。<br>明治大学理工学部情報科学科2年在学中。現在大学ではCやJavaなど基礎言語を学んでいる。<br>高校1年生からWebデザインを学び始め、現在も趣味・仕事としてWebサイトを作り続けている。大学1年生からはグラフィックデザインやUI/UXデザインを学び仕事に生かしている。<br>小学校から運営委員や学級委員になり、中高では文化祭実行委員や生徒会、大学ではバドミントンサークルの幹部とリーダーシップを取ることと企画立案が得意である。
-            </p>
-          </div>
-        </div>
-        <div class="inner">
-          <h2>Skill</h2>
-          <p>HTML5 / CSS3 / Sass / JavaScript / jQuery / Ruby / PHP / Processing / Sketch / InVisionStudio / AdobeIllustrator / AdobePhotoshop / AdobeXD / AdobePremierePro / GitHub</p>
-        </div>
-        <div class="inner">
-          <h2>Tool</h2>
-          <p>Brackets / cloud9 / Atom / Sketch / Adobe / GitHub </p>
-        </div>
-        <div class="inner">
-          <h2>Intern</h2>
-          <table>
-            <tr>
-              <td class="date">2017/06-now</td>
-              <td>ライフイズテック株式会社<br><span>Webデザイン/Webサービス開発/デザイナー/LINEスタンプクリエイター コースメンター<br>学校プロモーション(営業)<br>教科書作成･修正･確認<br>メンター向け Webデザインコース サブ講師</span>
-              </td>
-            </tr>
-            <tr>
-              <td class="date">2017/11-2018/04</td>
-              <td>テテマーチ株式会社 フロントエンドエンジニアインターン</td>
-            </tr>
-            <tr>
-              <td class="date">2017/12-2018/04</td>
-              <td>#SnSnap株式会社 フロントエンドエンジニアインターン</td>
-            </tr>
-            <tr>
-              <td class="date">2018/08/23-24</td>
-              <td>株式会社ディー・エヌ・エー <br>DeNAサマーインターン UX/UIデザインコース</td>
-            </tr>
-            <tr>
-              <td class="date">2018/09/06</td>
-              <td>株式会社グッドパッチ デザイナー1Dayインターン</td>
-            </tr>
-          </table>
-        </div>
-      </section>
 
       <footer>
         <div class="inline">
@@ -321,9 +371,9 @@
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script type="text/javascript" src="js/jquery.inview.min.js"></script>
   <script type="text/javascript" src="js/function.js"></script>
   <script type="text/javascript" src="js/modaal.min.js"></script>
-  <script type="text/javascript" src="./js/jquery.animateCssPlus.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
 </body>
 
