--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Yuka Nagatomo Portfolio</title>
+  <link rel="stylesheet" href="css/slick-theme.css">
+  <link rel="stylesheet" href="css/slick.css">
   <link rel="stylesheet" href="css/modaal.css">
   <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
   <link rel="stylesheet" href="./css/animate.css">
@@ -34,18 +36,20 @@
         <p>Front end Engineer</p>
         <p>UI/UX Designer</p>
       </div>
-      <a href="#link-work" class="scroll"><span></span>Scroll</a>
+      <a href="#link-about" class="scroll"><span></span>Scroll</a>
     </header>
     <main>
       <section id="link-about">
-        <h1 class="title">ABOUT</h1>
+        <div class="title-wrapper">
+          <h1 class="title">ABOUT</h1>
+        </div>
         <div class="inner">
           <img src="images/yuka.jpg" alt="" class="me">
           <div class="profile-inner">
             <h1>長友 優果</h1>
             <h3>Yuka Nagatomo</h3>
             <p>
-              1998年12月24日生まれ。<br>明治大学理工学部情報科学科3年在学中。現在大学ではCやJavaなど基礎言語を学んでいる。<br>高校1年生からWebデザインを学び始め、現在も趣味・仕事としてWebサイトを作り続けている。大学1年生からはグラフィックデザインやUI/UXデザインを学び仕事に生かしている。<br>小学校から運営委員や学級委員になり、中高では文化祭実行委員や生徒会、大学ではバドミントンサークルの幹部とリーダーシップを取ることと企画立案が得意である。
+              1998年12月24日生まれ。<br>明治大学理工学部情報科学科3年在学中。現在大学ではCやJavaなど基礎言語を学んでいる。<br>高校1年生からWebデザインを学び始め、現在も趣味・仕事としてWebサイトを作り続けている。大学1年生からはグラフィックデザインやUI/UXデザインを学び仕事に生かしている。<br>小学校から運営委員や学級委員になり、中高では文化祭実行委員や生徒会、大学ではバドミントンサークルの幹部とリーダーシップを取ることが得意。
             </p>
           </div>
         </div>
@@ -93,9 +97,11 @@
         </div>
       </section>
       <section id="link-work">
-        <h1 class="title">WORK</h1>
+        <div class="title-wrapper">
+          <h1 class="title">UI/UX</h1>
+        </div>
         <div class="switch">
-          <div class="work animated work12">
+          <div class="work animated">
             <img src="images/work12w.png" alt="">
             <a href="#modal12" class="modal">
               <div class="description">
@@ -103,7 +109,7 @@
               </div>
             </a>
           </div>
-          <div class="work animated work11">
+          <div class="work animated">
             <img src="images/work11w.png" alt="">
             <a href="#modal11" class="modal">
               <div class="description">
@@ -111,15 +117,7 @@
               </div>
             </a>
           </div>
-          <div class="work animated work10">
-            <img src="images/work10.png" alt="">
-            <a href="#modal10" class="modal">
-              <div class="description">
-                <h2>Name card</h2>
-              </div>
-            </a>
-          </div>
-          <div class="work animated work9">
+          <div class="work animated">
             <img src="images/work9w.png" alt="">
             <a href="#modal9" class="modal">
               <div class="description">
@@ -127,7 +125,7 @@
               </div>
             </a>
           </div>
-          <div class="work animated work8">
+          <div class="work animated">
             <img src="images/work8.png" alt="">
             <a href="#modal8" class="modal">
               <div class="description">
@@ -136,7 +134,7 @@
             </a>
           </div>
           <!--
-          <div class="work fadein animated work7">
+          <div class="work fadein animated">
             <img src="images/work7w.png" alt="">
             <a href="#modal7" class="modal">
               <div class="description">
@@ -145,7 +143,7 @@
             </a>
           </div>
 -->
-          <div class="work animated work6">
+          <div class="work animated">
             <img src="images/work6w.png" alt="">
             <a href="#modal6" class="modal">
               <div class="description">
@@ -153,16 +151,7 @@
               </div>
             </a>
           </div>
-          <div class="work animated work5">
-            <img src="images/work5.png" alt="">
-            <a href="#modal5" class="modal">
-              <div class="description">
-                <h2>Footwork T-shirt Design</h2>
-              </div>
-            </a>
-
-          </div>
-          <div class="work animated work4">
+          <div class="work animated">
             <img src="images/work4w.png" alt="">
             <a href="#modal4" class="modal">
               <div class="description">
@@ -171,7 +160,7 @@
             </a>
           </div>
           <!--
-          <div class="work fadein animated work3">
+          <div class="work fadein animated">
             <img src="images/work3w.png" alt="">
             <a href="#modal3" class="modal">
               <div class="description">
@@ -180,7 +169,7 @@
             </a>
           </div>
 -->
-          <div class="work animated work2">
+          <div class="work animated">
             <img src="images/work2w.png" alt="">
             <a href="#modal2" class="modal">
               <div class="description">
@@ -188,7 +177,7 @@
               </div>
             </a>
           </div>
-          <div class="work animated work1">
+          <div class="work animated">
             <img src="images/work1w.png" alt="">
             <a href="#modal1" class="modal">
               <div class="description">
@@ -221,16 +210,6 @@
             <div class="strip">
               <a href="https://life-is-tech.com/schoolcup2019/" class="btn" target="_blank">MORE</a>
             </div>
-          </div>
-          <div id="modal10" style="display:none;">
-            <h2>Name card</h2>
-            <p class="bold">design</p>
-            <p class="small">illustrator</p>
-            <p class="small">2018.12</p>
-            <p class="text">ライフイズテックでのキャンプ用にメンター名の名刺を製作した。メンター名はお茶から由来しているのでお茶の葉をイメージしたデザインにした。中高生向けのイベントのため、可愛らしくわかりやすいデザインになるように心がけた。
-            </p>
-            <img src="images/name1.png" alt="">
-            <img src="images/name2.png" alt="">
           </div>
           <div id="modal9" style="display:none;">
             <h2>Richapo TV</h2>
@@ -281,20 +260,6 @@
             <div class="strip">
               <a href="https://webd-development.netlify.com/second.html" class="btn" target="_blank">MORE</a>
             </div>
-          </div>
-          <div id="modal5" style="display:none;">
-            <h2>Footwork T-shirt Design</h2>
-            <p class="bold">graphicdesign</p>
-            <p class="small">Illustrator</p>
-            <p class="small">2018.03</p>
-            <p class="text">自分が幹部を務めるバドミントンサークル"フットワーク"の18期Tシャツデザインを担当。バドミントンのシャトルとラケットをモチーフにしたロゴを作成。シャトルのロゴは勝利をイメージさせる冠が含まれている。シンプルだがこだわった作品。<br>※カラーは指定あり。
-            </p>
-            <h3>Tシャツ前面<span>(ブラック・スポーツTシャツ)</span></h3>
-            <img src="images/tshirt.png" alt="">
-            <h3>パーカー背面<span>(ブラック・フード付きパーカー)</span></h3>
-            <img src="images/parka.png" alt="">
-            <h3>ズポン側面<span>(グレー・スウェット)</span></h3>
-            <img src="images/bottom.png" alt="">
           </div>
           <div id="modal4" style="display:none;">
             <h2>#tagto</h2>
@@ -357,6 +322,70 @@
           </div>
         </div>
       </section>
+      <section id="link-work">
+        <div class="title-wrapper">
+          <h1 class="title">GRAPHIC</h1>
+        </div>
+        <div class="switch">
+          <div class="work animated">
+            <img src="images/work10.png" alt="">
+            <a href="#modal10" class="modal">
+              <div class="description">
+                <h2>Name card</h2>
+              </div>
+            </a>
+          </div>
+          <div class="work animated">
+            <img src="images/work5.png" alt="">
+            <a href="#modal5" class="modal">
+              <div class="description">
+                <h2>Footwork T-shirt Design</h2>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="modalwindow">
+          <div id="modal10" style="display:none;">
+            <h2>Name card</h2>
+            <p class="bold">design</p>
+            <p class="small">illustrator</p>
+            <p class="small">2018.12</p>
+            <p class="text">ライフイズテックでのキャンプ用にメンター名の名刺を製作した。メンター名はお茶から由来しているのでお茶の葉をイメージしたデザインにした。中高生向けのイベントのため、可愛らしくわかりやすいデザインになるように心がけた。
+            </p>
+            <img src="images/name1.png" alt="">
+            <img src="images/name2.png" alt="">
+          </div>
+          <div id="modal5" style="display:none;">
+            <h2>Footwork T-shirt Design</h2>
+            <p class="bold">graphicdesign</p>
+            <p class="small">Illustrator</p>
+            <p class="small">2018.03</p>
+            <p class="text">自分が幹部を務めるバドミントンサークル"フットワーク"の18期Tシャツデザインを担当。バドミントンのシャトルとラケットをモチーフにしたロゴを作成。シャトルのロゴは勝利をイメージさせる冠が含まれている。シンプルだがこだわった作品。<br>※カラーは指定あり。
+            </p>
+            <h3>Tシャツ前面<span>(ブラック・スポーツTシャツ)</span></h3>
+            <img src="images/tshirt.png" alt="">
+            <h3>パーカー背面<span>(ブラック・フード付きパーカー)</span></h3>
+            <img src="images/parka.png" alt="">
+            <h3>ズポン側面<span>(グレー・スウェット)</span></h3>
+            <img src="images/bottom.png" alt="">
+          </div>
+        </div>
+      </section>
+      <section id="link-mind">
+        <div class="title-wrapper">
+          <h1 class="title">MIND</h1>
+        </div>
+        <div class="inner">
+          <h2>Life is Tech ! Mentor</h2>
+          <p>Life is Tech !（ライフイズテック）は中学生・高校生が参加する国内最大級のIT教育プログラムを運営する会社です。私はここでメンターとして中高生にITの楽しさを伝える仕事をしています。<br>担当コースは Webデザイン(HTML,CSS,JS)/Webサービス(Ruby)/デザイナー(Ai,Ps)/LINEスタンプクリエイター(Ai) コースです。<br>「教育×IT×エンターテイメント」で、子ども達の未来を変える！をテーマに、キャンプ(5日間の集中型プログラム)を全力で楽しんでもらうことで開発(パソコンを使ったものづくり)って楽しいんだと気づいてもらえるようなチームビルディングや場の雰囲気作りを大切にして働いています。</p>
+          <div class="slider">
+            <li><img src="./images/03.jpg" alt="" width="800"></li>
+            <li><img src="./images/04.jpg" alt="" width="800"></li>
+            <li><img src="./images/01.jpg" alt="" width="800"></li>
+            <li><img src="./images/02.jpg" alt="" width="800"></li>
+          </div>
+        </div>
+      </section>
 
       <footer>
         <div class="inline">
@@ -371,6 +400,7 @@
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script type="text/javascript" src="js/slick.min.js"></script>
   <script type="text/javascript" src="js/jquery.inview.min.js"></script>
   <script type="text/javascript" src="js/function.js"></script>
   <script type="text/javascript" src="js/modaal.min.js"></script>
