--- a/index.html
+++ b/index.html
@@ -98,79 +98,59 @@
       </section>
       <section id="link-work">
         <div class="title-wrapper">
-          <h1 class="title">UI/UX</h1>
+          <h1 class="title">UI/UX DESIGN</h1>
         </div>
         <div class="switch">
           <div class="work animated">
-            <img src="images/work12w.png" alt="">
-            <a href="#modal12" class="modal">
+            <img src="images/work8.jpg" alt="">
+            <a href="#modal8" class="modal">
               <div class="description">
                 <h2>QuizKnock</h2>
               </div>
             </a>
           </div>
           <div class="work animated">
-            <img src="images/work11w.png" alt="">
-            <a href="#modal11" class="modal">
+            <img src="images/work7.jpg" alt="">
+            <a href="#modal7" class="modal">
               <div class="description">
                 <h2>School Cup</h2>
               </div>
             </a>
           </div>
           <div class="work animated">
-            <img src="images/work9w.png" alt="">
-            <a href="#modal9" class="modal">
+            <img src="images/work6.jpg" alt="">
+            <a href="#modal6" class="modal">
               <div class="description">
                 <h2>Richapo TV</h2>
               </div>
             </a>
           </div>
           <div class="work animated">
-            <img src="images/work8.png" alt="">
-            <a href="#modal8" class="modal">
+            <img src="images/work5.jpg" alt="">
+            <a href="#modal5" class="modal">
               <div class="description">
                 <h2>Household accounts app</h2>
               </div>
             </a>
           </div>
-          <!--
-          <div class="work fadein animated">
-            <img src="images/work7w.png" alt="">
-            <a href="#modal7" class="modal">
-              <div class="description">
-                <h2>Yuka Nagatomo Portfolio</h2>
-              </div>
-            </a>
-          </div>
--->
           <div class="work animated">
-            <img src="images/work6w.png" alt="">
-            <a href="#modal6" class="modal">
+            <img src="images/work4.jpg" alt="">
+            <a href="#modal4" class="modal">
               <div class="description">
                 <h2>For Web Course</h2>
               </div>
             </a>
           </div>
           <div class="work animated">
-            <img src="images/work4w.png" alt="">
-            <a href="#modal4" class="modal">
+            <img src="images/work3.jpg" alt="">
+            <a href="#modal3" class="modal">
               <div class="description">
                 <h2>#tagto</h2>
               </div>
             </a>
           </div>
-          <!--
-          <div class="work fadein animated">
-            <img src="images/work3w.png" alt="">
-            <a href="#modal3" class="modal">
-              <div class="description">
-                <h2>Original Magazine</h2>
-              </div>
-            </a>
-          </div>
--->
           <div class="work animated">
-            <img src="images/work2w.png" alt="">
+            <img src="images/work2.jpg" alt="">
             <a href="#modal2" class="modal">
               <div class="description">
                 <h2>InstaAntenna</h2>
@@ -178,7 +158,7 @@
             </a>
           </div>
           <div class="work animated">
-            <img src="images/work1w.png" alt="">
+            <img src="images/work1.jpg" alt="">
             <a href="#modal1" class="modal">
               <div class="description">
                 <h2>Let's go Shizuoka</h2>
@@ -187,7 +167,7 @@
           </div>
         </div>
         <div class="modalwindow">
-          <div id="modal12" style="display:none;">
+          <div id="modal8" style="display:none;">
             <h2>Quiz Knock</h2>
             <p class="bold">design/front-end</p>
             <p class="small">slim/sass/JavaScript(jQuery)</p>
@@ -199,7 +179,7 @@
               <a href="https://quizknock.com/" class="btn" target="_blank">MORE</a>
             </div>
           </div>
-          <div id="modal11" style="display:none;">
+          <div id="modal7" style="display:none;">
             <h2>School Cup 2019</h2>
             <p class="bold">front-end</p>
             <p class="small">HTML/CSS/JavaScript</p>
@@ -211,7 +191,7 @@
               <a href="https://life-is-tech.com/schoolcup2019/" class="btn" target="_blank">MORE</a>
             </div>
           </div>
-          <div id="modal9" style="display:none;">
+          <div id="modal6" style="display:none;">
             <h2>Richapo TV</h2>
             <p class="bold">design/front-end</p>
             <p class="small">HTML/CSS/JavaScript</p>
@@ -227,7 +207,7 @@
               <a href="https://richapotv.netlify.com/" class="btn" target="_blank">MORE</a>
             </div>
           </div>
-          <div id="modal8" style="display:none;">
+          <div id="modal5" style="display:none;">
             <h2>Household accounts app</h2>
             <p class="bold">planning/design</p>
             <p class="small">Sketch</p>
@@ -236,16 +216,7 @@
             </p>
             <img src="images/dena.gif" alt="" style="width: 30%">
           </div>
-          <div id="modal7" style="display:none;">
-            <h2>Yuka Nagatomo Portfolio</h2>
-            <p class="bold">design/front-end</p>
-            <p class="small">HTML/CSS/JavaScript</p>
-            <p class="small">2018.06</p>
-            <p class="text">本サイトであり、私、長友優果のポートフォリオウェブサイト。自分の好きなオレンジをテーマカラーにしている。
-            </p>
-            <img src="images/portfolio.png" alt="">
-          </div>
-          <div id="modal6" style="display:none;">
+          <div id="modal4" style="display:none;">
             <h2>For Web Course</h2>
             <p class="bold">design/front-end</p>
             <p class="small">HTML/CSS/JavaScript</p>
@@ -261,7 +232,7 @@
               <a href="https://webd-development.netlify.com/second.html" class="btn" target="_blank">MORE</a>
             </div>
           </div>
-          <div id="modal4" style="display:none;">
+          <div id="modal3" style="display:none;">
             <h2>#tagto</h2>
             <p class="bold">wireframe/design assistant/front-end</p>
             <p class="small">PHP(Laravel)/HTML/Sass/JavaScript</p>
@@ -280,22 +251,6 @@
             <div class="strip">
               <a href="https://tagto.snsnap.net/contact" class="btn" target="_blank">MORE</a>
             </div>
-          </div>
-          <div id="modal3" style="display:none;">
-            <h2>Original Magazine</h2>
-            <p class="bold">design/front-end/back-end</p>
-            <p class="small">HTML/CSS/JavaScript/Ruby(Sinatra)</p>
-            <p class="small">2018.03</p>
-            <p class="text">ライフイズテック株式会社にて、ウェブサービス研修の最終オリジナル作品としてつくったウェブサイト。 テーマは「自分だけの雑誌を作る」。雑誌を切り抜いてスクラップしたいけど、雑誌は傷つけたくない。そんな願いを叶える、スマートフォンで写真をとってアップロードするだけで簡単にまとめて、自分だけの雑誌(スクラップブック)ができるサービス。 雑誌のような雰囲気が楽しめるデザインと、ピンタレストのようなウェブとして見やすいデザインを組み合わせた。
-            </p>
-            <h3>新規登録画面</h3>
-            <img src="images/om-signup.png" alt="">
-            <h3>ユーザートップ画面</h3>
-            <img src="images/om-top2.png" alt="">
-            <h3>ランキングページ</h3>
-            <img src="images/om-rank.png" alt="">
-            <h3>新規投稿画面</h3>
-            <img src="images/om-new.png" alt="">
           </div>
           <div id="modal2" style="display:none;">
             <h2>InstaAntenna サービス紹介</h2>
@@ -324,11 +279,19 @@
       </section>
       <section id="link-work">
         <div class="title-wrapper">
-          <h1 class="title">GRAPHIC</h1>
+          <h1 class="title">GRAPHIC DESIGN</h1>
         </div>
         <div class="switch">
+         <div class="work animated">
+            <img src="images/work11.jpg" alt="">
+            <a href="#modal11" class="modal">
+              <div class="description">
+                <h2>kurashiru banner</h2>
+              </div>
+            </a>
+          </div>
           <div class="work animated">
-            <img src="images/work10.png" alt="">
+            <img src="images/work10.jpg" alt="">
             <a href="#modal10" class="modal">
               <div class="description">
                 <h2>Name card</h2>
@@ -336,8 +299,8 @@
             </a>
           </div>
           <div class="work animated">
-            <img src="images/work5.png" alt="">
-            <a href="#modal5" class="modal">
+            <img src="images/work9.jpg" alt="">
+            <a href="#modal9" class="modal">
               <div class="description">
                 <h2>Footwork T-shirt Design</h2>
               </div>
@@ -345,6 +308,20 @@
           </div>
         </div>
         <div class="modalwindow">
+         <div id="modal11" style="display:none;">
+            <h2>kurashiru banner</h2>
+            <p class="bold">design</p>
+            <p class="small">illustrator/photoshop</p>
+            <p class="small">2019.1~</p>
+            <p class="text">レシピ動画配信サービス「kurashiru」のアプリ内キャンペーンバナー。季節のテーマに合わせながらもクラシルのブランドガイドに則ったクラシルらしいデザインになるようにしている。また、課金への誘導バナーなので期間限定・無料・お得感などをアピールしつつチープに見えすぎないようなデザインを心がけている。<br>
+            このほかにアプリ内7箇所にリサイズ、パターン違いのバナーを作成。企業やインフルエンサーとのタイアップ広告、バナー等も作成を担当。
+            </p>
+            <img src="images/kurashiru1.png" alt="">
+            <img src="images/kurashiru2.png" alt="">
+            <div class="strip">
+              <a href="https://www.kurashiru.com/" class="btn" target="_blank">MORE</a>
+            </div>
+          </div>
           <div id="modal10" style="display:none;">
             <h2>Name card</h2>
             <p class="bold">design</p>
@@ -355,7 +332,7 @@
             <img src="images/name1.png" alt="">
             <img src="images/name2.png" alt="">
           </div>
-          <div id="modal5" style="display:none;">
+          <div id="modal9" style="display:none;">
             <h2>Footwork T-shirt Design</h2>
             <p class="bold">graphicdesign</p>
             <p class="small">Illustrator</p>
